safari text overflow bug fix restrict use of display flex for only when image is present

--- a/_css/app_grid.scss
+++ b/_css/app_grid.scss
@@ -129,8 +129,8 @@
   //set item and image layout,sizing
   
   .news-item-batch1 {
-    &.news-item-link-none,
-    &.news-item-link a {
+    &.news-item-link-none.news-item-image,
+    &.news-item-link.news-item-image a {
       display: flex; 
       flex-direction: column;
     } 
@@ -140,8 +140,8 @@
   @media(min-width: $screen-sm) {
     .news-item-batch2,
     .news-item-batch3 {
-      &.news-item-link-none,
-      &.news-item-link a {
+      &.news-item-link-none.news-item-image,
+      &.news-item-link.news-item-image a {
         display: flex; 
         flex-direction: column;
       } 
